kubernetes/db-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
  namespace: voting
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: zombiefish/postgres:15-alpine-0.1
        name: postgres
        securityContext:
          runAsUser: 1000750000
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        # - mountPath: /var/lib/postgresql/data
        - mountPath: /var/lib/postgresql
          name: db-data
      volumes:
      - name: db-data
        emptyDir: {}
