kubernetes/result-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
  namespace: voting
spec:
  # type: LoadBalancer
  ports:
  - name: "result-service"
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: result
