kubernetes/vote-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
  namespace: voting
spec:
  # type: LoadBalancer
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 8080
  selector:
    app: vote
