kubernetes/result-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: voting
spec:
  rules:
  - host: ap-result.apps.osvlab.highvail.com
    http:
      paths:
      - backend:
          service:
            name: result
            port:
              number: 80
        pathType: ImplementationSpecific
#   tls:
#   - hosts:
#     - ap-result.highvail.com
#     secretName: highvail-tls
