kubernetes/vote-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  namespace: voting
spec:
  rules:
  - host: ap-vote.apps.osvlab.highvail.com
    http:
      paths:
      - backend:
          service:
            name: vote
            port:
              number: 80
        pathType: ImplementationSpecific
#   tls:
#   - hosts:
#     - ap-vote.highvail.com
#     secretName: highvail-tls
