kubernetes/vote.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vote

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: db
  name: db
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: db
  template:
    metadata:
      labels:
        app: db
    spec:
      containers:
      - image: postgres:15.18-alpine
        imagePullPolicy: Always
        name: postgres
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - mountPath: /var/lib/postgresql
          name: db-data
      volumes:
      - name: db-data
        persistentVolumeClaim:
          claimName: postgres-db

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: db
  name: db
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - name: "db-service"
    port: 5432
    targetPort: 5432
  selector:
    app: db

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: redis
  name: redis
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
      - image: redis:alpine
        imagePullPolicy: Always
        name: redis
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - mountPath: /data
          name: redis-data
      volumes:
      - name: redis-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: redis
  name: redis
  namespace: vote
spec:
  type: ClusterIP
  ports:
  - name: "redis-service"
    port: 6379
    targetPort: 6379
  selector:
    app: redis

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: result
  name: result
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: result
  template:
    metadata:
      labels:
        app: result
    spec:
      containers:
      - name: result
        image: zombiefish/vote:result-1
        imagePullPolicy: Always
        ports:
          - name: result
            containerPort: 8080
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: result-ingress
  namespace: vote
spec:
  rules:
  - host: kvm-result.highvail.com
    http:
      paths:
      - backend:
          service:
            name: result
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kvm-result.highvail.com
    secretName: highvail-tls

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: result
  name: result
  namespace: vote
spec:
  # type: LoadBalancer
  ports:
  - name: "result-service"
    protocol: TCP
    port: 80
    targetPort: 8080
  selector:
    app: result

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: vote
  name: vote
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: vote
  template:
    metadata:
      labels:
        app: vote
    spec:
      containers:
      - image: zombiefish/vote:vote-1
        imagePullPolicy: Always
        name: vote
        ports:
        - containerPort: 8080
          name: vote
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: vote-ingress
  namespace: vote
spec:
  rules:
  - host: kvm-vote.highvail.com
    http:
      paths:
      - backend:
          service:
            name: vote
            port:
              number: 80
        pathType: ImplementationSpecific
  tls:
  - hosts:
    - kvm-vote.highvail.com
    secretName: highvail-tls

---
apiVersion: v1
kind: Service
metadata:
  labels:
    app: vote
  name: vote
  namespace: vote
spec:
  # type: LoadBalancer
  ports:
  - name: "vote-service"
    port: 80
    targetPort: 8080
  selector:
    app: vote

---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: worker
  name: worker
  namespace: vote
spec:
  replicas: 1
  selector:
    matchLabels:
      app: worker
  template:
    metadata:
      labels:
        app: worker
    spec:
      containers:
      - image: zombiefish/vote:worker-1
        imagePullPolicy: Always
        name: worker
